objects/webm__Webmerge_Document__c.object
<CustomObject>
    <fields>
        <fullName>webm__Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Webmerge Documents</relationshipLabel>
        <relationshipName>Webmerge_Documents</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>webm__Batch_Number__c</fullName>
        <label>Batch Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>webm__Batch_Order__c</fullName>
        <label>Batch Order</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>webm__Batch_Settings__c</fullName>
        <label>Batch Settings</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>webm__Case__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Case</label>
        <referenceTo>Case</referenceTo>
        <relationshipLabel>Webmerge Documents</relationshipLabel>
        <relationshipName>Webmerge_Documents</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>webm__Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Webmerge Documents</relationshipLabel>
        <relationshipName>Webmerge_Documents</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>webm__Field_Values__c</fullName>
        <label>Field Values</label>
        <length>65000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>webm__Lead__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Lead</label>
        <referenceTo>Lead</referenceTo>
        <relationshipLabel>Webmerge Documents</relationshipLabel>
        <relationshipName>Webmerge_Documents</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>webm__Opportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Webmerge Documents</relationshipLabel>
        <relationshipName>Webmerge_Documents</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>webm__Record_ID__c</fullName>
        <label>Salesforce Record ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>webm__Status_Reason__c</fullName>
        <label>Status Reason</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>webm__Test_Mode__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Test Mode</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>webm__Webmerge_Mapping__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Webmerge Mapping</label>
        <referenceTo>webm__Webmerge_Mapping__c</referenceTo>
        <relationshipLabel>Webmerge Documents</relationshipLabel>
        <relationshipName>Webmerge_Documents</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>webm__Webmerge_Status__c</fullName>
        <label>Webmerge Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Pending</fullName>
                </value>
                <value>
                    <fullName>Successful</fullName>
                </value>
                <value>
                    <fullName>Failed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Formstack Document</label>
    <nameField>
        <displayFormat>wm{0000000}</displayFormat>
        <label>Webmerge Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Formstack Documents</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>